--- a/kubernetes/flannel/kube-flannel.yml
+++ b/kubernetes/flannel/kube-flannel.yml
@@ -127,7 +127,8 @@ data:
     {
       "Network": "10.244.0.0/16",
       "Backend": {
-        "Type": "vxlan"
+        "Type": "vxlan",
+        "Directrouting": true
       }
     }
 ---
