--- a/kubernetes/app/rbac.yaml
+++ b/kubernetes/app/rbac.yaml
@@ -1,8 +1,8 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  creationTimestamp: null
   name: pods-reader
+  namespace: pear-test-ns
 rules:
 - apiGroups:
   - ""
@@ -16,8 +16,8 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  creationTimestamp: null
   name: magedu-read-pods
+  namespace: pear-test-ns
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
