--- a/kubernetes/app/storageclass.yaml
+++ b/kubernetes/app/storageclass.yaml
@@ -1,5 +1,5 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: es-data-db
+  name: pear-storageclass
 provisioner: fuseim.pri/ifs
