--- a/kubernetes/app/pvc_pear.yaml
+++ b/kubernetes/app/pvc_pear.yaml
@@ -3,9 +3,11 @@ kind: PersistentVolumeClaim
 metadata:
   name: nfs-pvc
   namespace: pear-test-ns
+  annotations:
+    volume.beta.kubernetes.io/storage-class: "managed-nfs-storage"   #与nfs-StorageClass.yaml metadata.name保持一致
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
-      storage: 4Gi
+      storage: 10Mi
