--- a/kubernetes/nfs/nfs-sc.yaml
+++ b/kubernetes/nfs/nfs-sc.yaml
@@ -2,6 +2,6 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: managed-nfs-storage
-provisioner: pear-nfs-storage #这里的名称要和provisioner配置文件中的环境变量PROVISIONER_NAME保持一致
+provisioner: pear-nfs-storage # PROVISIONER_NAME
 parameters:
   archiveOnDelete: "false"
