--- a/kubernetes/nfs/rbac.yaml
+++ b/kubernetes/nfs/rbac.yaml
@@ -2,8 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: nfs-client-provisioner
-  # replace with namespace where provisioner is deployed
-  namespace: pear-test-ns        #根据实际环境设定namespace,下面类同
+  namespace: default
 ---
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
@@ -30,8 +29,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: nfs-client-provisioner
-    # replace with namespace where provisioner is deployed
-    namespace: pear-test-ns
+    namespace: default
 roleRef:
   kind: ClusterRole
   name: nfs-client-provisioner-runner
@@ -41,8 +39,7 @@ kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: leader-locking-nfs-client-provisioner
-    # replace with namespace where provisioner is deployed
-  namespace: pear-test-ns
+  namespace: default
 rules:
   - apiGroups: [""]
     resources: ["endpoints"]
@@ -55,8 +52,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: nfs-client-provisioner
-    # replace with namespace where provisioner is deployed
-    namespace: pear-test-ns
+    namespace: default
 roleRef:
   kind: Role
   name: leader-locking-nfs-client-provisioner
