--- a/kubernetes/base/pod_v1.yaml
+++ b/kubernetes/base/pod_v1.yaml
@@ -1,12 +1,21 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: first-pod
+  name: pear-pod
   labels:
-    app: bash
-    tir: backend
+    app: pear
 spec:
   containers:
-  - name: bash-container
-    image: docker.io/busybox
+  - name: container01
+    image: busybox:latest
+    imagePullPolicy: IfNotPresent
     command: ['sh', '-c', 'echo Hello Kubernetes! && sleep 3600']
+  initContainers:
+  - name: init01
+    image: busybox:latest
+    imagePullPolicy: IfNotPresent
+    command: ['sh', '-c', 'echo init01 && sleep 2']
+  - name: init02
+    image: busybox:latest
+    imagePullPolicy: IfNotPresent
+    command: ['sh', '-c', 'echo init02 && sleep 2']
