--- a/kubernetes/base/quota/quota_v3.yaml
+++ b/kubernetes/base/quota/quota_v3.yaml
@@ -7,9 +7,9 @@ items:
     name: pods-high
   spec:
     hard:
-      cpu: "1000"
-      memory: 200Gi
-      pods: "10"
+      cpu: "1000m"
+      memory: 2Gi
+      pods: "20"
     scopeSelector:
       matchExpressions:
       - operator : In
@@ -21,9 +21,9 @@ items:
     name: pods-medium
   spec:
     hard:
-      cpu: "10"
-      memory: 20Gi
-      pods: "10"
+      cpu: "500m"
+      memory: 1Gi
+      pods: "15"
     scopeSelector:
       matchExpressions:
       - operator : In
@@ -35,8 +35,8 @@ items:
     name: pods-low
   spec:
     hard:
-      cpu: "5"
-      memory: 10Gi
+      cpu: "200m"
+      memory: 500Mi
       pods: "10"
     scopeSelector:
       matchExpressions:
