--- a/kubernetes/prometheus/prometheus.yml
+++ b/kubernetes/prometheus/prometheus.yml
@@ -31,3 +31,16 @@ scrape_configs:
   - job_name: 'node'
     static_configs:
     - targets: ['192.168.126.128:9100']
+
+  - job_name: 'pushgateway'
+    static_configs:
+    - targets: ['192.168.126.128:9091']
+
+  - job_name: 'cadvisor'
+    static_configs:
+    - targets: ['192.168.126.128:8080']
+
+  - job_name: 'go-test'
+    metrics_path: "/metrics"
+    static_configs:
+    - targets: ['192.168.126.128:5198']
